# Code-Sentinel

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.sentinel/: config.yaml  conventions.md
src/sentinel/: __init__.py  cli.py
src/sentinel/analyzers/: __init__.py  conventions.py  dead_code.py  duplicates.py  security.py
src/sentinel/core/: __init__.py  config.py  graph.py  memory.py  scanner.py
src/sentinel/integrations/: __init__.py  git.py  github.py
src/sentinel/tui/: __init__.py  app.py
